# whack

./: Cargo.toml  LICENSE-MIT  Readme.md
src/: helpers.rs  insertion_sort.rs  lib.rs  macros.rs  macros_x86.rs  macros_x86_64.rs  near_module_alloc.rs  patch_map.rs  pe.rs  platform.rs  win_common.rs  x86.rs  x86_64.rs  x86_64_inline.rs
tests/: custom_calling_conv.rs  hook.rs  hook_kernel32.rs  imports.rs  inline_hook.rs  inline_hook_x86.asm  large_hook.rs  replacing.rs  x86_64_riprel.asm  x86_64_riprel.rs
tests/hook_dll_src/: asmx86.asm  asmx86_64.asm  cfile.c  large_x86.asm  large_x86_64.asm  make_large_86.bat  make_large_86_64.bat  makex86.bat  makex86_64.bat  rustfile.lib  rustfile.rs
whack_nuottei/: Cargo.toml
whack_nuottei/src/: lib.rs
