[package]
authors = ["Markus Heikkinen <ittevien@gmail.com>"]
name = "whack"
version = "0.2.0"

[dependencies]
byteorder = "1.2"
lde = "0.3"
libc = "0.2"
smallvec = "1.0"

[dependencies.winapi]
version = "0.3.4"
features = [
    "fileapi", "heapapi", "libloaderapi", "memoryapi", "processenv", "winbase"
]

[dev-dependencies.winapi]
version = "0.3.4"
features = [
    "fileapi", "handleapi", "heapapi", "libloaderapi", "memoryapi", "processenv",
    "sysinfoapi", "winbase"
]
