[package]
authors = ["Markus Heikkinen <ittevien@gmail.com>"]
name = "whack"
version = "0.2.0"

[dependencies]
byteorder = { version = "1.2", default-features = false }
lde = "0.3"
smallvec = "1.0"

[dependencies.winapi]
version = "0.3.4"
features = [
    "heapapi", "libloaderapi", "memoryapi", "errhandlingapi",
]

[dev-dependencies]
byteorder = "1.2"

[dev-dependencies.winapi]
version = "0.3.4"
features = [
    "fileapi", "handleapi", "heapapi", "libloaderapi", "memoryapi", "sysinfoapi", "winbase"
]
