[package]
authors = ["Markus Heikkinen <ittevien@gmail.com>"]
name = "whack"
version = "0.2.0"
edition = "2021"

[profile.release]
debug = 1

[dependencies]
byteorder = { version = "1.2", default-features = false }
lde = "0.3"
smallvec = "1.0"

[dependencies.windows-sys]
version = "0.60"
features = [
    "Win32_System_Diagnostics_Debug",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
]

[dev-dependencies]
byteorder = "1.2"

[dev-dependencies.windows-sys]
version = "0.60"
features = [
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_WindowsProgramming",
]
